# Py_Turtle

./: 4 sides square.py  5 angles star.py  5 angles stars.py  6 sides polygon.py  README.md  number-5.py  pyproject.toml
